--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadberry</title>
-    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             background-color: black;
@@ -14,14 +13,9 @@
             height: 100vh;
             margin: 0;
         }
-
-        .logo {
-            max-width: 100%;
-            max-height: 100%;
-        }
     </style>
 </head>
 <body>
-    <img src="logo.png" alt="Cadberry Logo" class="logo">
+    <img src="https://imgur.com/a/3v3Ee5x" alt="Cadberry Logo">
 </body>
 </html>
