--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     </style>
 </head>
 <body>
-    <img src="https://imgur.com/a/3v3Ee5x" alt="Cadberry Logo">
+    <img src="https://imgur.com/OIM2Td2" alt="Cadberry Logo">
 </body>
 </html>
