--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
             height: 100vh;
             margin: 0;
         }
+        .logo {
+            max-width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
-    <img src="https://i.imgur.com/OIM2Td2.png" alt="Cadberry Logo">
+    <img src="https://freyjake.github.io/cadberry.ai.github.io/logo.png" alt="Cadberry Logo" class="logo">
 </body>
 </html>
