--- a/index.html
+++ b/index.html
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadberry</title>
+    <title>Cadberry AI</title>
+    <link rel="icon" href="https://i.imgur.com/HRx1Zni.png" type="image/png">
     <style>
         body {
             background-color: black;
+            margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
         }
-        .logo {
-            max-width: 100%;
+        img {
+            width: auto;
             height: auto;
         }
     </style>
 </head>
 <body>
-    <img src="https://freyjake.github.io/cadberry.ai.github.io/logo.png" alt="Cadberry Logo" class="logo">
+    <img src="https://i.imgur.com/HRx1Zni.png" alt="Cadberry AI Logo">
 </body>
 </html>
