--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             height: 100vh;
         }
         img {
-            width: auto;
+            max-width: 100%;
             height: auto;
         }
     </style>
 </head>
 <body>
-    <img src="https://i.imgur.com/HRx1Zni.png" alt="Cadberry AI Logo">
+    <img src="https://i.imgur.com/F7D5hNs.png" alt="Cadberry AI Logo">
 </body>
 </html>
