--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     </style>
 </head>
 <body>
-    <img src="https://i.imgur.com/F7D5hNs.png" alt="Cadberry AI Logo">
+    <img src="https://i.imgur.com/OIM2Td2.png" alt="Cadberry AI Logo">
 </body>
 </html>
