--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             height: 100vh;
         }
         img {
-            max-width: 100%;
+            width: 50%;
             height: auto;
         }
     </style>
