--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
         }
 
         .footer a {
-            color: white;
+            color: yellow;
             text-decoration: none;
             margin: 0 15px;
             font-size: 14px;
+            font-family: 'Helvetica', Arial, sans-serif;
         }
 
         .footer a:hover {
