--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <div class="logo-container">
         <img src="https://i.imgur.com/OIM2Td2.png" alt="Cadberry AI Logo">
-        <img src="https://i.imgur.com/8197GUe.png" alt="New Image">
+        <img src="https://i.imgur.com/O1BM8VC.png" alt="New Image">
     </div>
 
     <div class="footer">
