--- a/terms.html
+++ b/terms.html
@@ -10,6 +10,7 @@
             color: yellow;
             font-family: Arial, sans-serif;
             padding: 20px;
+            margin: 0 10%;
         }
 
         h1 {
@@ -24,6 +25,7 @@
         .back-button {
             display: inline-block;
             margin-top: 20px;
+            margin-bottom: 20px;
             padding: 10px 20px;
             background-color: #333;
             color: yellow;
@@ -35,9 +37,14 @@
         .back-button:hover {
             background-color: #555;
         }
+
+        .back-button.top {
+            margin-bottom: 0;
+        }
     </style>
 </head>
 <body>
+    <a href="index.html" class="back-button top">Back to Home</a>
     <h1>Terms and Conditions</h1>
     
     <p>Website Terms of Use<br>
@@ -182,6 +189,6 @@
 
     <p>Copyright © 20_24__ Cadberry, Inc. All rights reserved. All trademarks, logos and service marks (“Marks”) displayed on the Site are our property or the property of other third parties. You are not permitted to use these Marks without our prior written consent or the consent of such third party which may own the Marks.</p>
 
-    <a href="index.html" class="back-button">Back to Home</a>
+        <a href="index.html" class="back-button">Back to Home</a>
 </body>
 </html>
