--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         }
 
         .footer a {
-            color: yellow;
+            color: FEFF55;
             text-decoration: none;
             margin: 0 15px;
             font-size: 16px;
