--- a/terms.html
+++ b/terms.html
@@ -49,7 +49,7 @@
     
     <p>Website Terms of Use<br>
     Version 1.0<br>
-    Last revised on: ________________, 20___</p>
+    Last revised on: August 24, 2024</p>
 
     <p>The website located at cadberry.ai (the “Site”) is a copyrighted work belonging to Cadberry, Inc. (“Company”, “us”, “our”, and “we”). Certain features of the Site may be subject to additional guidelines, terms, or rules, which will be posted on the Site in connection with such features. All such additional terms, guidelines, and rules are incorporated by reference into these Terms.</p>
 
@@ -187,7 +187,7 @@
 
     <h2>Copyright/Trademark Information</h2>
 
-    <p>Copyright © 20_24__ Cadberry, Inc. All rights reserved. All trademarks, logos and service marks (“Marks”) displayed on the Site are our property or the property of other third parties. You are not permitted to use these Marks without our prior written consent or the consent of such third party which may own the Marks.</p>
+    <p>Copyright © 2024 Cadberry, Inc. All rights reserved. All trademarks, logos and service marks (“Marks”) displayed on the Site are our property or the property of other third parties. You are not permitted to use these Marks without our prior written consent or the consent of such third party which may own the Marks.</p>
 
         <a href="index.html" class="back-button">Back to Home</a>
 </body>
