--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
             width: 25%;
             height: auto;
             margin: 0 10px;
+            transition: transform 1s ease;
+        }
+
+        .logo-container img.spin {
+            animation: spin 2s forwards;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+            50% {
+                transform: rotate(180deg);
+            }
+            100% {
+                transform: rotate(0deg);
+            }
         }
 
         .footer {
@@ -68,7 +85,7 @@
 
     <div class="logo-container">
         <img src="https://i.imgur.com/OIM2Td2.png" alt="Cadberry AI Logo">
-        <img src="https://i.imgur.com/O1BM8VC.png" alt="Hmmmm">
+        <img id="hmmm-image" src="https://i.imgur.com/O1BM8VC.png" alt="Hmmmm">
     </div>
 
     <div class="footer">
@@ -81,6 +98,7 @@
 
     <script>
         const cursor = document.querySelector('.custom-cursor');
+        const hmmmImage = document.getElementById('hmmm-image');
 
         document.addEventListener('mousemove', e => {
             cursor.style.left = `${e.clientX}px`;
@@ -93,6 +111,14 @@
 
         document.addEventListener('mouseleave', () => {
             cursor.style.display = 'none';
+        });
+
+        // Add spin animation on click
+        hmmmImage.addEventListener('click', () => {
+            hmmmImage.classList.add('spin');
+            setTimeout(() => {
+                hmmmImage.classList.remove('spin');
+            }, 2000); // Match duration of the animation
         });
     </script>
 
