--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <div class="logo-container">
         <img src="https://i.imgur.com/OIM2Td2.png" alt="Cadberry AI Logo">
-        <img id="hmmm-image" src="https://i.imgur.com/O1BM8VC.png" alt="Hmmmm">
+        <img id="hmmm-image" src="https://i.imgur.com/GOUzgHq.png" alt="Hmmmm">
     </div>
 
     <div class="footer">
