--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
             transition: transform 1s ease;
         }
 
+        /* Specific styling for the Hmmm image */
+        #hmmm-image {
+            width: 12.5%; /* 50% smaller than the original 25% */
+        }
+
         .logo-container img.spin {
             animation: spin 2s forwards;
         }
