--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         .logo-container img {
             width: 25%;
             height: auto;
-            margin: 0 10px;
+            margin: 0 50px; /* 100px total separation between images */
             transition: transform 1s ease;
         }
 
