--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <div class="footer">
         <a href="terms.html">Terms</a>
-        <a href="mailto:jake@cadberry.ai">Investors</a>
+        <a href="mailto:jake@cadberry.ai">Contact</a>
     </div>
 
     <!-- Custom cursor element -->
