--- a/index.html
+++ b/index.html
@@ -84,6 +84,27 @@
             z-index: 10000;
             transform: translate(-50%, -50%);
         }
+
+        /* Twitter icon styles */
+        .twitter-icon {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            width: 40px;
+            height: 40px;
+            cursor: pointer;
+            transition: transform 0.3s ease; /* Smooth grow effect */
+        }
+
+        .twitter-icon img {
+            width: 100%;
+            height: 100%;
+            filter: invert(94%) sepia(92%) saturate(2405%) hue-rotate(1deg) brightness(103%) contrast(104%); /* Yellow color */
+        }
+
+        .twitter-icon:hover {
+            transform: scale(1.1); /* Grow by 10% on hover */
+        }
     </style>
 </head>
 <body>
@@ -95,7 +116,14 @@
 
     <div class="footer">
         <a href="terms.html">Terms</a>
-        <a href="mailto:jake@cadberry.ai">Contact</a>
+        <a href="mailto:jake@cadberry.ai">Investors</a>
+    </div>
+
+    <!-- Twitter Icon -->
+    <div class="twitter-icon">
+        <a href="https://x.com/CadberryAI" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6f/Logo_X_black_and_white.png" alt="Twitter Logo">
+        </a>
     </div>
 
     <!-- Custom cursor element -->
