--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
         .twitter-icon img {
             width: 100%;
             height: 100%;
-            filter: invert(94%) sepia(92%) saturate(2405%) hue-rotate(1deg) brightness(103%) contrast(104%); /* Yellow color */
         }
 
         .twitter-icon:hover {
@@ -122,7 +121,7 @@
     <!-- Twitter Icon -->
     <div class="twitter-icon">
         <a href="https://x.com/CadberryAI" target="_blank">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6f/Logo_X_black_and_white.png" alt="Twitter Logo">
+            <img src="https://www.iconsdb.com/icons/preview/yellow/twitter-x-xxl.png" alt="Twitter Logo">
         </a>
     </div>
 
