--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <!-- Twitter Icon -->
     <div class="twitter-icon">
         <a href="https://x.com/CadberryAI" target="_blank">
-            <img src="https://www.iconsdb.com/icons/preview/yellow/twitter-x-xxl.png" alt="Twitter Logo">
+            <img src="https://www.iconsdb.com/icons/preview/yellow/twitter-x-xxl.png" alt="Twitter X Logo" onerror="this.onerror=null;this.src='https://via.placeholder.com/40x40?text=X';">
         </a>
     </div>
 
