--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <!-- Twitter Icon -->
     <div class="twitter-icon">
         <a href="https://x.com/CadberryAI" target="_blank">
-            <img src="https://www.iconsdb.com/icons/preview/yellow/twitter-x-xxl.png" alt="Twitter X Logo">
+            <img src="https://i.imgur.com/abBv7ps.png" alt="Twitter X Logo">
         </a>
     </div>
 
