--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             top: 20px;
             right: 20px;
             width: auto;
-            height: 40px; /* Maintain the original height while adjusting width proportionally */
+            height: 80px; /* Doubled height */
             cursor: pointer;
             transition: transform 0.3s ease; /* Smooth grow effect */
         }
