--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         .twitter-icon {
             position: fixed;
             top: 20px;
-            right: 20px;
+            left: 20px; /* Moved to the top left corner */
             width: auto;
             height: 80px; /* Doubled height */
             cursor: pointer;
@@ -115,7 +115,7 @@
 
     <div class="footer">
         <a href="terms.html">Terms</a>
-        <a href="mailto:jake@cadberry.ai">Investors</a>
+        <a href="mailto:jake@cadberry.ai">Contact</a>
     </div>
 
     <!-- Twitter Icon -->
