--- a/index.html
+++ b/index.html
@@ -125,6 +125,14 @@
         </a>
     </div>
 
+  <script src="https://www.waitforit.me/waitlistV3.bundle.js" async></script>
+
+  <div id="waitforit-embed" data-project-id="457d33af-d74c-407f-9f04-191f0adc4266">
+
+  </div>
+  
+  <link rel="stylesheet" type="text/css" href="https://www.waitforit.me/wfiEmbedStyles.css"></link>
+  
     <!-- Custom cursor element -->
     <div class="custom-cursor"></div>
 
