--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             }
 
             .twitter-icon {
-                height: 60px; /* Slightly smaller for mobile */
+                height: 50px; /* Smaller size for mobile */
             }
 
             #waitforit-embed {
