--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
         /* Twitter icon styles */
         .twitter-icon {
             position: fixed;
-            top: 20px;
-            left: 20px; /* Moved to the top left corner */
+            top: 40px; /* Increased padding from top */
+            left: 40px; /* Increased padding from left */
             width: auto;
-            height: 80px; /* Doubled height */
+            height: 80px; /* Height remains the same */
             cursor: pointer;
             transition: transform 0.3s ease; /* Smooth grow effect */
         }
@@ -143,6 +143,8 @@
 
             .twitter-icon {
                 height: 50px; /* Smaller size for mobile */
+                top: 20px; /* Adjust for mobile */
+                left: 20px; /* Adjust for mobile */
             }
 
             #waitforit-embed {
