--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         body {
             background-color: black;
             margin: 0;
-            padding: 10px; /* Add padding for the yellow border */
-            border: 10px solid yellow; /* Solid yellow border */
+            padding: 5px; /* Reduced padding for the yellow border */
+            border: 5px solid yellow; /* Reduced yellow border */
             box-sizing: border-box;
             display: flex;
             justify-content: center;
@@ -58,8 +58,8 @@
 
         .footer {
             position: fixed;
-            bottom: 10px; /* Adjusted for border visibility */
-            width: calc(100% - 20px); /* Account for border */
+            bottom: 5px; /* Adjusted for border visibility */
+            width: calc(100% - 10px); /* Account for border */
             background-color: #141414;
             text-align: center;
             padding: 10px 0;
